--- a/Style.css
+++ b/Style.css
@@ -16,10 +16,12 @@ header {
 }
 
 .headerpic {
-  grid-area:headerpic;
-  padding:5px;
-  height:10vmax;
+    grid-area:headerpic;
+    padding:5px;
+    height:10vmax;
+    animation: logo .5s;
 }
+
 
 .headertext {
   grid-area:headertext;
@@ -35,18 +37,20 @@ header {
 }
 
 header h1 {
-     font-size:5vw;
-     color:#ffffff;
-     font-family:Impact;
-     text-shadow: 2px 2px 5px #3217ff;
-     margin: 0;
+    font-size:5vw;
+    color:#ffffff;
+    text-shadow: 2px 2px 5px #3217ff;
+    margin: 0;
+    animation: words 1.5s;
 }
 
 header h3 {
     font-size:3vw;
     color:#ffffff;
     margin:0;
+    animation: words 2s;
 }
+
 
 nav {
     grid-area:nav;
@@ -239,6 +243,59 @@ video {
 .div2{
   grid-area:div2;
 }
+
+@keyframes logo {
+   0% {
+      opacity: 0;
+      transform:  translatey(-1em);
+   }
+   100% {
+      opacity: 1;
+      transform: translatey(0);
+   }
+}
+
+@keyframes words {
+   0% {
+      opacity: 0;
+      transform: translateX(1em);
+   }
+    50% {
+      opacity: .5;
+      transform: translateY(.1em);
+   }
+   100% {
+      opacity: 1;
+      transform: translateX(0);
+   }
+}
+
+headerpic {
+    grid-area:headerpic;
+    padding:5px;
+    height:10vmax;
+    animation: logo .5s;
+}
+
+figure img {
+    margin-top:16px;
+    max-width:20em;
+    border: 2px solid #0000b0;
+    transition: all .5s ease-in-out;
+}
+
+figure img:hover {
+  transform: scale(1.1);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+      animation: none !important;
+      transition: none !important;
+      }
+}
+
+
 
 /*---------------------------Mobile Layout----------------------------*/
 .container1 { /*for later*/
